Added style to individual article component

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ h4 {
 }
 p {
 	margin-bottom: 1.25rem;
+	font-size: 1rem;
 }
 @media screen and (min-width: 800px) {
 	h1 {
@@ -86,6 +87,9 @@ p {
 	h3,
 	h4 {
 		line-height: 1;
+	}
+	.container {
+		width: 95%;
 	}
 }
 /* more global css */
@@ -232,4 +236,12 @@ hr {
 .btn-container {
 	display: flex;
 	justify-content: space-around;
+}
+.container {
+	background: #fff;
+	margin: 0 auto;
+	width: 65%;
+	padding: 5px 10px 5px;
+	border-radius: 0.75rem;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
 }
